--- a/web/21.11.md
+++ b/web/21.11.md
@@ -1,68 +1,16 @@
 <p>
-  <span style="font-weight: 400;">This documentation shows how to install the Countly JS tracker and use Countly to track your web page in detail. It applies to the SDK version 22.02.0.</span>
+  <span style="font-weight: 400;">This documentation shows how to install the Countly JS tracker and use Countly to track your web page in detail. It applies to the SDK version 21.11.X</span>
 </p>
 <div class="callout callout--info">
   <p class="callout__title">
     <span class="wysiwyg-font-size-large"><strong>Older documentation</strong></span>
   </p>
   <p>
-    To access the documentation for version 20.11.0 and older, click
-    <a href="https://support.count.ly/hc/en-us/articles/6195638333593" target="blank">here</a>.
+    To access the documentation for version 20.11 and older, click
+    <a href="https://support.count.ly/hc/en-us/articles/4408793793689" target="blank">here</a>.
   </p>
 </div>
-<p>
-  Countly can run with all browsers that supports ECMAScript 5. Minimum versions
-  of major internet browsers that fully support ES5 are:
-</p>
-<table style="border-collapse: collapse; height: 46px; padding: 2px; margin-right: auto; margin-left: auto;" border="1" cellspacing="2" cellpadding="2">
-  <tbody>
-    <tr class="wysiwyg-text-align-center" style="height: 36px;">
-      <td class="wysiwyg-text-align-center" style="width: 28.9867%; height: 36px;">
-        <strong>IE</strong>
-      </td>
-      <td class="wysiwyg-text-align-center" style="width: 1.5528%; height: 36px;">
-        <strong>Edge</strong>
-      </td>
-      <td class="wysiwyg-text-align-center" style="width: 9.68603%; height: 36px;">
-        <strong>Firefox</strong>
-      </td>
-      <td class="wysiwyg-text-align-center" style="width: 5.29042%; height: 36px;">
-        <strong>Firefox (Android)</strong>
-      </td>
-      <td class="wysiwyg-text-align-center" style="width: 10%; height: 36px;">
-        <strong>Opera</strong>
-      </td>
-      <td class="wysiwyg-text-align-center" style="width: 10%; height: 36px;">
-        <strong>Opera (Mobile)</strong>
-      </td>
-      <td class="wysiwyg-text-align-center" style="width: 10%; height: 36px;">
-        <strong>Safari</strong>
-      </td>
-      <td class="wysiwyg-text-align-center" style="width: 10%; height: 36px;">
-        <strong>Safari (iOS)</strong>
-      </td>
-      <td class="wysiwyg-text-align-center" style="width: 10%; height: 36px; text-align: center; vertical-align: middle;">
-        <strong>Chrome</strong>
-      </td>
-      <td class="wysiwyg-text-align-center" style="width: 22.4019%; height: 36px;">
-        <strong>Chrome (Android)</strong>
-      </td>
-    </tr>
-    <tr style="height: 22px; padding: 2px;">
-      <td class="wysiwyg-text-align-center" style="width: 28.9867%; height: 10px;">10</td>
-      <td class="wysiwyg-text-align-center" style="width: 1.5528%; height: 10px;">12</td>
-      <td class="wysiwyg-text-align-center" style="width: 9.68603%; height: 10px;">21</td>
-      <td class="wysiwyg-text-align-center" style="width: 5.29042%; height: 10px;">96</td>
-      <td class="wysiwyg-text-align-center" style="width: 10%; height: 10px;">15</td>
-      <td class="wysiwyg-text-align-center" style="width: 10%; height: 10px;">64</td>
-      <td class="wysiwyg-text-align-center" style="width: 10%; height: 10px;">6</td>
-      <td class="wysiwyg-text-align-center" style="width: 10%; height: 10px;">6</td>
-      <td class="wysiwyg-text-align-center" style="width: 10%; height: 10px;">23</td>
-      <td class="wysiwyg-text-align-center" style="width: 22.4019%; height: 10px;">98</td>
-    </tr>
-  </tbody>
-</table>
-<h1>Adding the SDK to the Project</h1>
+<h1>Adding the SDK to the project</h1>
 <p>
   <span style="font-weight: 400;">In order to track your web server pages, you will need the Countly JavaScript tracking library. This library comes ready &amp; automatically hosted on your Countly server (at&nbsp;</span><a href="http://yourdomain.com/sdk/web/countly.min.js)"><span style="font-weight: 400;">http://yourdomain.com/sdk/web/countly.min.js)</span></a><span style="font-weight: 400;">&nbsp;and can be updated via command line. This library also works well with mobile applications that consist of HTML5 views.</span>
 </p>
@@ -88,7 +36,7 @@
   <span style="font-weight: 400;">Before we begin, the following information is meant for those who have examined our mobile SDKs - we can tell that events or tags that are used in mobile SDKs are quite similar to those we use in JavaScript code. For example, it's possible to modify custom property values of user details with modification commands, such as inc, mul, max, or min. Likewise, any event can be easily sent with segmentation.</span>
 </p>
 <h1>SDK Integration</h1>
-<h2>Minimal Setup</h2>
+<h2>Minimal setup</h2>
 <p>
   <span style="font-weight: 400;">You may use the Countly Web SDK asynchronously without blocking content loading. It may also be used if the Countly script has not yet been loaded by pushing function calls into the&nbsp;</span><strong>Countly.q</strong><span style="font-weight: 400;">&nbsp;queue or synchronously allowing the script to load before executing any functions.</span>
 </p>
@@ -224,7 +172,7 @@ function clickEvent(ob){
 &lt;input type="button" id="testButton" onclick="clickEvent(this)" value="Test Button"&gt;</code></pre>
   </div>
 </div>
-<h2>SDK Logging</h2>
+<h2>SDK logging</h2>
 <p>
   The first thing you should do while integrating our SDK is enabling logging.
   If logging is enabled, then our SDK will print out debug messages about its internal
@@ -279,7 +227,7 @@ function clickEvent(ob){
 });</code></pre>
   </div>
 </div>
-<h2>SDK Notes</h2>
+<h2>SDK notes</h2>
 <div class="callout callout--info">
   <p class="callout__title">
     Why aren’t I able to see AngularJS errors on the Countly dashboard?
@@ -301,7 +249,7 @@ function clickEvent(ob){
     IDE.
   </p>
 </div>
-<h3>Setup Properties</h3>
+<h3>Setup properties</h3>
 <p>
   Here are the properties you may set up upon Countly initialization:
 </p>
@@ -480,7 +428,7 @@ Countly.ip_address = "83.140.15.1";</code></pre>
 <p>
   <span style="font-weight: 400;">Note that the Countly web SDK automatically captures UTM tags and stores them as user properties together with the corresponding user. This will make users segmentable in all the places around the dashboard, where granular data is used and segmentation capabilities are provided.</span>
 </p>
-<h1>Crash Reporting</h1>
+<h1>Crash reporting</h1>
 <p>
   <span style="font-weight: 400;">Countly also provides a way for tracking JavaScript errors on your websites.</span>
 </p>
@@ -653,7 +601,7 @@ catch(ex){
   documentation.
 </p>
 <h1>Events</h1>
-<h2>Adding an Event</h2>
+<h2>Adding an event</h2>
 <p>
   <span style="font-weight: 400;">Events are a way to track any custom actions or other data you would like to track from your website. You may also set segments to be able to view a breakdown of the action by providing the segment values.</span>
 </p>
@@ -768,7 +716,7 @@ Countly.end_event({
   </div>
 </div>
 <h1>Sessions</h1>
-<h2>Automatic Session Tracking</h2>
+<h2>Automatic session tracking</h2>
 <p>
   <span style="font-weight: 400;">This method will automatically track user sessions by calling begin, extend, and end session methods.</span>
 </p>
@@ -784,9 +732,9 @@ Countly.end_event({
     <pre><code class="javascript">Countly.track_sessions();</code></pre>
   </div>
 </div>
-<h2>Manual Sessions</h2>
+<h2>Manual sessions</h2>
 <p>
-  <strong>Beginning a Session</strong>
+  <strong>Beginning a session</strong>
 </p>
 <p>
   <span style="font-weight: 400;">This method would allow you to control sessions manually. Only use this method if you aren’t planning on calling the track_sessions method and set the&nbsp;</span><em><span style="font-weight: 400;">use_session_cookie</span></em><span style="font-weight: 400;">&nbsp;setting to false for more granular control of the session.</span>
@@ -842,7 +790,7 @@ Countly.end_event({
     <pre><code class="javascript">Countly.end_session(sec)</code></pre>
   </div>
 </div>
-<h1>View Tracking</h1>
+<h1>View tracking</h1>
 <p>
   <span style="font-weight: 400;">This method will track the current pageview by using location.path as the page name and then reporting it to the server.</span>
 </p>
@@ -959,7 +907,7 @@ Countly.q.push(['track_pageview', null, null, {theme:"red", mode:"fullscreen"}])
 Countly.track_pageview(null, null, {theme:"red", mode:"fullscreen"});<br></code></pre>
   </div>
 </div>
-<h2>Overriding View Name and URL Getters</h2>
+<h2>Overriding view name and URL getters</h2>
 <p>
   <span style="font-weight: 400;">There are cases when determining the view name requires more complex logic, and in some cases, you will need to separate the URL and the View naming. This is done so you may still have some business logic view names, yet you have the valid URL underneath them to view action maps, such as clicks and scrolls.</span>
 </p>
@@ -1005,68 +953,7 @@ Countly.track_pageview(null, null, {theme:"red", mode:"fullscreen"});<br></code>
 };</code></pre>
   </div>
 </div>
-<h1>Device ID Management</h1>
-<h2>Device ID Generation</h2>
-<p>
-  By default Countly generates and assigns a random device ID to each device that
-  reaches your website. This can be seen as the default way to recognize and capture
-  the user behavior by keeping this ID at the local storage and referring to it
-  when necessary. All activity done from the same device would be recorded under
-  the same device ID and for practical reasons it can be seen as a user identifier.
-</p>
-<p>
-  Limitations to this method comes when there multiple users using the same device
-  where all users using the same device would be seen as a single user, or when
-  a user reaches to your website from multiple devices or browsers in incognito
-  mode where all devices would be seen as separate users. If these scenarios are
-  an issue of concern to you, you can mitigate them with various device management
-  strategies.
-</p>
-<p>
-  While it is possible to change an assigned ID (typically during the user login)
-  and implement your own logic, as explained at the next section, there are some
-  other methods that you can assign an ID to your users. Assigning an ID inside
-  your initialization config or adding a query to a link that you have provided
-  to your user can be named as two of these methods:
-</p>
-<pre><code class="javascript">
-// adding device ID here will prevent the generation of a random ID
-Countly.init({
-    app_key:"YOUR_APP_KEY",
-    url: "https://try.count.ly",
-    device_id:"yourDeviceID",
-});
-
-// you can assign a device ID to a user through a link that you have provided to them by adding cly_device_id to your url query
-yourUrl + ?cly_device_id=yourDeviceID
-</code></pre>
-<p>
-  If you want to erase the previously stored device ID from the storage you can
-  set clear_stored_id flag to true at the init config to do so:
-</p>
-<pre><code class="javascript">
-// this will erase the stored device ID from the local storage every time the Countly is initialized
-Countly.init({
-    app_key:"YOUR_APP_KEY",
-    url: "https://try.count.ly",
-    clear_stored_id: true,
-});
-</code></pre>
-<div class="callout callout--info">
-  <p class="callout__title">
-    <span class="wysiwyg-font-size-large"><strong>Device ID Priority</strong></span>
-  </p>
-<p>
-  If you have used multiple methods to set a device ID for your users
-  during your first init, Countly would fall back to the device ID priority hierarchy
-  to assign the the correct ID for your user. This hierarchy is as follows:
-</p>
-<p>
-  URL set ID &gt; Developer set ID &gt; Temp ID (offline mode) &gt; SDK generated
-  ID
-</p>
-</div>
-<h2>Changing Device ID</h2>
+<h1>Device ID management</h1>
 <p>
   <span style="font-weight: 400;">In some cases, you may want to change the ID of the user/device that you provided or Countly automatically generated, e.g. when a user was changed.</span>
 </p>
@@ -1178,52 +1065,8 @@ Countly.init();</code></pre>
     <pre><code class="java">Countly.disable_offline_mode(device_id);</code></pre>
   </div>
 </div>
-<h2>Retrieving Current Device ID</h2>
-<p>
-  If you want to execute your functions or to implement your logic depending on
-  the type of device ID that the user has Countly offers a convenience method for
-  you to do so.
-</p>
-<p>
-  You can reach the current device ID of the user with get_device_id:
-</p>
-<pre><code class="javascript">
-// you can just check if the device ID of the user is exactly what it should be
-var userId = Countly.get_device_id();
-if ( userId === "expectedId" ) {
-  //... do something
-}  
-</code></pre>
-<p>
-  Depending on whether a user is vising your site for the first time or might have
-  just logged in to their account or for many other reasons a user can have a certain
-  device ID that has a different type than another user. These types are:
-</p>
-<ul>
-  <li>DEVELOPER_SUPPLIED device ID</li>
-  <li>SDK_GENERATED device ID</li>
-  <li>TEMPORARY_ID device ID</li>
-</ul>
-<p>
-  For DEVELOPER_SUPPLIED device ID, the assignment of the ID is handled by your
-  internal logic, for SDK_GENERATED device ID, the ID of the user was generated
-  randomly by Countly, and for TEMPORARY_ID device ID, the user is currently offline
-  and no request is being sent to the servers.
-</p>
-<p>
-  You can reach the device ID type of a user any time you want simply by calling
-  the get_device_id_type function:
-</p>
-<pre><code class="javascript">
-// You can get and compare if the device ID type is correct, and do something after
-var idType = Countly.get_device_id_type();
-// here lets check if it is SDK_GENERATED. Other options are DEVELOPER_SUPPLIED and TEMPORARY_ID
-if ( idType === Countly.DeviceIdType.SDK_GENERATED ) {
-  //... do something
-}
-</code></pre>
 <h1>Heatmaps</h1>
-<h2>Tracking Clicks</h2>
+<h2>Tracking clicks</h2>
 <p>
   <span style="font-weight: 400;">This method will automatically track clicks on the last reported view and display them on the heatmap.</span>
 </p>
@@ -1258,7 +1101,7 @@ if ( idType === Countly.DeviceIdType.SDK_GENERATED ) {
 <div class="img-container">
   <img src="https://count.ly/images/guide/b893929-11.png">
 </div>
-<h2>Tracking Scrolls</h2>
+<h2>Tracking scrolls</h2>
 <p>
   <span style="font-weight: 400;">This method will automatically track scrolls on the last reported view and display them on the heatmap.</span>
 </p>
@@ -1280,7 +1123,7 @@ if ( idType === Countly.DeviceIdType.SDK_GENERATED ) {
 <div class="img-container">
   <img src="https://count.ly/images/guide/5bc44bc-topbar.png">
 </div>
-<h1>Remote Config</h1>
+<h1>Remote config</h1>
 <p>
   <span style="font-weight: 400;">Remote configuration functionality is disabled by default and needs to be explicitly enabled.</span>
 </p>
@@ -1290,7 +1133,7 @@ if ( idType === Countly.DeviceIdType.SDK_GENERATED ) {
 <p>
   <span style="font-weight: 400;">In the event of one of the following sessions, assuming it would not be possible to load the remote configuration from storage, you will receive an error object in the callback, but you will still have the stored values of the cached remote configuration object.</span>
 </p>
-<h2>Enabling Remote Configuration</h2>
+<h2>Enabling Remote configuration</h2>
 <p>
   <span style="font-weight: 400;">You may enable remote configuration by providing&nbsp;the </span><em><span style="font-weight: 400;">remote_config</span></em><span style="font-weight: 400;">&nbsp;setting when initializing the SDK.</span>
 </p>
@@ -1358,7 +1201,7 @@ var remoteConfig = Countly.get_remote_config();
 
 //or get value for specific key like 'test'
 var test = Countly.get_remote_config("test");</code></pre>
-<h2>Reloading Configuration Values</h2>
+<h2>Reloading configuration values</h2>
 <p>
   <span style="font-weight: 400;">Should you need to reload the remote config in order to receive the latest value, call&nbsp;the </span><em><span style="font-weight: 400;">fetch_remote_config</span></em><span style="font-weight: 400;">&nbsp;method.</span>
 </p>
@@ -1385,7 +1228,7 @@ if (!err) {
 console.log(remoteConfigs);
 }
 });</code></pre>
-<h1>User Feedback</h1>
+<h1>User feedback</h1>
 <p>
   If you want to receive feedback from your users there are a couple of ways you
   can do that in Countly. To get a rating or suggestion from users you can use
@@ -1401,7 +1244,7 @@ console.log(remoteConfigs);
   to get user feedback is to get a numerical user rating. That can be done with
   the Countly rating widget.
 </p>
-<h3>Rating Widget</h3>
+<h3>Rating widget</h3>
 <p>
   Rating widgets create a channel for users to interact, through a pop up widget.
 </p>
@@ -1485,7 +1328,7 @@ Countly.initializeRatingWidgets(["6181435609e272efa5f64307", "619bb3737730596209
 </code></pre>
   </div>
 </div>
-<h3>Manual Rating Reporting</h3>
+<h3>Manual rating reporting</h3>
 <p>
   In case you don't want to use Countly provided feedback and rating UI where you
   may use your own UI and simply report collected data to Countly.
@@ -1520,7 +1363,7 @@ Countly.recordRatingWidgetWithID({
 });</code></pre>
   </div>
 </div>
-<h2>Feedback Widget</h2>
+<h2>Feedback widget</h2>
 <p>
   There are two types of surveys available - NPS and Basic survey.
 </p>
@@ -1592,8 +1435,8 @@ function feedbackWidgetsCallback(countlyPresentableFeedback, err) {
 <p>
   Note: Feedback widget's show policies are handled internally by the web sdk.
 </p>
-<h1>User Profiles</h1>
-<h2>User Details</h2>
+<h1>User profiles</h1>
+<h2>User details</h2>
 <p>
   <span style="font-weight: 400;">If you have any details about the user/visitor, you may provide Countly with that information. This will allow you to track every specific user on the "User Profiles" tab, which is available with <a href="http://count.ly/enterprise-edition">Countly Enterprise Edition</a>.</span>
 </p>
@@ -1642,7 +1485,7 @@ function feedbackWidgetsCallback(countlyPresentableFeedback, err) {
  });</code></pre>
   </div>
 </div>
-<h2>Modifying Custom Data</h2>
+<h2>Modifying custom data</h2>
 <p>
   <span style="font-weight: 400;">Additionally, you may perform different manipulations on custom data values, such as incrementing the current value on the server or storing an array of values under the same property.</span>
 </p>
@@ -1685,7 +1528,7 @@ Countly.userData.pull(key, value) //remove value from array under property with 
 Countly.userData.save() //send userData to server</code></pre>
   </div>
 </div>
-<h2>Orientation Tracking</h2>
+<h2>Orientation tracking</h2>
 <p>
   Orientation tracking is enabled by default and will be sent if the required "user"
   consent is given (if enabled). Countly will report the device orientation once
@@ -1778,7 +1621,7 @@ Countly.report_trace({
   provide the duration key and value in apm_metrics, otherwise custom traces won't
   be recorded.
 </p>
-<h2>Automatic Performance Monitoring</h2>
+<h2>Automatic performance monitoring</h2>
 <p>
   Automatic trace reporting has two different implementation depending on if you
   are using Countly synchronously or asynchronously.
@@ -1843,7 +1686,7 @@ Countly.q.push(["track_performance", {
         afterOnload: true
     }
 }]);</code></pre>
-<h3>Synchronous Implementation</h3>
+<h3>Synchronous implementation</h3>
 <p>
   To automatically report traces you will need to include 2 additional files in
   your project:
@@ -1875,8 +1718,8 @@ Countly.track_performance({
         afterOnload: true
     }
 });</code></pre>
-<h1>User Consent</h1>
-<h2>Opt In / Opt Out</h2>
+<h1>User consent</h1>
+<h2>Opt in / Opt out</h2>
 <p>
   <span style="font-weight: 400;">The Countly SDK will always be opt in by default, but you may easily disable all tracking by selecting&nbsp;the <strong>opt_out</strong>&nbsp;method. It will also persistently save settings and prevent tracking after page reloads. Select&nbsp;<strong>opt_in</strong> to resume tracking.</span>
 </p>
@@ -1917,7 +1760,7 @@ Countly.opt_in();</code></pre>
 <p>
   <span style="font-weight: 400;">This section will tell you how to set up GDPR compliant consent management with the Countly Web SDK.</span>
 </p>
-<h2>Disable Tracking Until Given Consent</h2>
+<h2>Disable tracking until given consent</h2>
 <p>
   <span style="font-weight: 400;">To disable tracking until consent is given for a specific feature, all you need to do is pass true as the&nbsp;</span><strong>require_consent</strong><span style="font-weight: 400;">&nbsp;config before or during your selection of the Countly&nbsp;</span><strong>init</strong><span style="font-weight: 400;">&nbsp;method.</span>
 </p>
@@ -1947,7 +1790,7 @@ Countly.require_consent = true;</code></pre>
 <p>
   <span style="font-weight: 400;">Next, you may select all the&nbsp;<a href="https://support.count.ly/hc/en-us/articles/360037441932-Web-analytics-JavaScript-#helper-methods" target="_self">helper methods</a>&nbsp;you will be using. They won't be tracking or sending anything to the server until consent is given.</span>
 </p>
-<h2>Features for Consent</h2>
+<h2>Features for consent</h2>
 <p>
   <span style="font-weight: 400;">The SDK provides different features for consent. You may check all the supported features for the current SDK by checking the&nbsp;</span><strong>Countly.features</strong><span style="font-weight: 400;">&nbsp;property. Here is a list containing all the properties with ex</span>planations:
 </p>
@@ -2016,7 +1859,7 @@ Countly.require_consent = true;</code></pre>
 //After this call Countly.add_consent("all") to allow all features</code></pre>
   </div>
 </div>
-<h2>Managing Consent</h2>
+<h2>Managing consent</h2>
 <p>
   <span style="font-weight: 400;">Upon a visitor’s arrival to your website, you should check if you already have consent from this visitor. If not, you should present them with a popup explaining what will be tracked and allow them to consent to tracking. When a user selects the consent preferences, you should persistently store it, and on each Countly load, let Countly know for which features the user gave consent by calling the&nbsp;<strong>Countly.add_consent</strong>&nbsp;method and passing one or multiple features (as an array). For example, you should also allow the user to change their mind regarding separate settings screens and when changes are going to be made there.</span>
   <span style="font-weight: 400;">Respectively call the <strong>Countly.add_consent</strong> or <strong>Countly.remove_consent</strong>&nbsp;methods to allow Countly to track specific features or disable tracking for them.</span>
@@ -2147,12 +1990,12 @@ localStorage.setItem("consents", JSON.stringify(response));
 }</code></pre>
   </div>
 </div>
-<h1>Other Features and Notes</h1>
-<h2>Automatically Fill User Data</h2>
+<h1>Other features and notes</h1>
+<h2>Automatically fill user data</h2>
 <p>
   <span style="font-weight: 400;">In most cases, you won’t know anything about your users, yet you will still want to try to collect any data possible. We provide 2 helper methods for this exact reason.</span>
 </p>
-<h3>Collect User Data From Filled Forms</h3>
+<h3>Collect user data from filled forms</h3>
 <p>
   <span style="font-weight: 400;">This method will look into the forms filled out by your users and will try to gather data, such as names, email addresses, usernames, etc.<br>All forms will automatically be checked, but you have the option to provide a form element if you would like to collect data only from a specific form, or select a method multiple times for different forms. Also, if you are already providing data for users, then you would not want to overwrite it. You may set the third parameter as true to indicate that data found should be stored in custom properties.</span>
 </p>
@@ -2198,7 +2041,7 @@ Countly.collect_from_forms(document, true);</code></pre>
 &lt;p&gt;&lt;input id="submit-form" type="submit" value="Submit"&gt;&lt;/p&gt;
 
 &lt;/form&gt;</code></pre>
-<h3>Collect User Data From Facebook</h3>
+<h3>Collect user data from Facebook</h3>
 <p>
   <span style="font-weight: 400;">If your website uses the Facebook JavaScript SDK, you may use this helper method to automatically collect user data from their Facebook accounts. Select the method right after Facebook SDK initialization and optionally set the object with custom properties and graph paths for values on where to receive them.</span>
 </p>
@@ -2268,7 +2111,7 @@ Countly.recordDirectAttribution();
 Countly.recordDirectAttribution("MyCampaignID");</code></pre>
   </div>
 </div>
-<h2>Track Link Clicks</h2>
+<h2>Track link clicks</h2>
 <p>
   <span style="font-weight: 400;">This method will track clicks to specific links and will report events with the </span><strong>linkClick</strong><span style="font-weight: 400;">&nbsp;key as well as the link's text, ID, and URLs as segments.</span>
 </p>
@@ -2290,7 +2133,7 @@ Countly.recordDirectAttribution("MyCampaignID");</code></pre>
 <p>
   <span style="font-weight: 400;">As soon as you include this one-liner coder, you will automatically be able to see the "linkClick" event in your dashboard as data flows in with the text, ID, and URLs as segments.</span>
 </p>
-<h2>Track Form Submissions</h2>
+<h2>Track form submissions</h2>
 <p>
   <span style="font-weight: 400;">This method will automatically track form submissions and collect form data. It will then input values in the form and report them as a Event with the <strong>formSubmit</strong>&nbsp;key.</span>
 </p>
@@ -2400,7 +2243,7 @@ NSString \*js = [NSString stringWithFormat: @"InitializeCountly('%@');", Countly
 [myWebView stringByEvaluatingJavaScriptFromString:js];</code></pre>
   </div>
 </div>
-<h2>Tracking Users with Javascript Disabled</h2>
+<h2>Tracking users with Javascript disabled</h2>
 <p>
   <span style="font-weight: 400;">In some cases, a user might have JavaScript disabled, meaning normal ways of tracking those users will prove ineffective. In such a case, you may use the transparent 1px x 1px image hosted on your Countly server as reporting the URL and report all the same&nbsp;<a href="https://api.count.ly/reference#i">parameters as all the SDKs have been described here</a>.</span>
 </p>
@@ -2418,7 +2261,7 @@ NSString \*js = [NSString stringWithFormat: @"InitializeCountly('%@');", Countly
   <span style="font-weight: 400;">However, as mentioned before, this accepts any parameters as a normal SDK endpoint does. Thus, if you dynamically generate data via the server, you may also dynamically generate this URL to provide information that you have about the user. That might be the device_id parameter (for identification), OS, OS version, and any other metrics or information you have, as for example</span>
 </p>
 <pre><code class="html">&lt;noscript&gt;&lt;img src='http://domain.com/pixel.png?app_key=12345&amp;device_id=test@test.com&amp;begin_session=1&amp;metrics={"_os":"Android", "_os_version":"4.1"}'/&gt;&lt;/noscript&gt;</code></pre>
-<h2>Multiple Trackers on the Same Domain</h2>
+<h2>Multiple trackers on the same domain</h2>
 <p>
   <span style="font-weight: 400;">Sometimes you would like to track different parts of the same domain/website as separate applications.</span>
 </p>
@@ -2455,7 +2298,7 @@ Countly.init();</code></pre>
 });</code></pre>
   </div>
 </div>
-<h2>Cross Website/Domain Tracking</h2>
+<h2>Cross website/domain tracking</h2>
 <p>
   <span style="font-weight: 400;">You will need to use the same device_id value on the same user in both places to track the same user across different websites or domains.</span>
 </p>
@@ -2465,7 +2308,7 @@ Countly.init();</code></pre>
 <p>
   <strong><span style="font-weight: 400;">Simply take the device ID value from <strong>Countly.device_id</strong>&nbsp;and pass it as a URL parameter named&nbsp;<strong>cly_device_id</strong>&nbsp;as follows:&nbsp;<a href="http://newdomain.com/?cly_device_id=your-user-device-id">http://newdomain.com/?cly_device_id=your-user-device-id.</a></span></strong>
 </p>
-<h2>Tracked Cookie List and Explanations</h2>
+<h2>Tracked cookie list and explanations</h2>
 <p>
   By default, Countly Web SDK uses local storage to keep information between page
   views, but if local storage is not available, Web SDK will try to fallback to
@@ -2508,66 +2351,6 @@ Countly.init();</code></pre>
     action map data
   </li>
 </ul>
-<h2>Multi Instancing</h2>
-<p>
-You can initialize Countly multiple times at the same page with different app keys to send information to different apps you own and gather data with higher flexibility and precision. These new instances have all functionality of Countly but depending on your init configuration they would behave differently. You can attach different events to different Countly instances to send events to specific applications even from the same button trigger or much more. A simple integration example would be:
-</p>
-<div class="tabs">
-  <div class="tabs-menu">
-    <span class="tabs-link is-active">Asynchronous</span>
-    <span class="tabs-link">Synchronous</span>
-  </div>
-  <div class="tab">
-    <pre><code class="javascript">
-Countly = Countly || {};
-Countly.q = Countly.q || [];
-
-// initializing first instance, which will be global Countly
-Countly.init({
-	app_key: "YOUR_APP_KEY_1",
-	url: "https://try.count.ly" //your server goes here
-})
-// report event to first app
-Countly.add_event({
-	key:"first_app"
-});
-
-// initialize second instance for another app 
-Countly.q.push(["init", {
-	app_key: "YOUR_APP_KEY_2", //must have different APP key
-	url: "https://try.count.ly" //your server goes here
-}])
-// report event to second app asynchronously by passing app key as first argument
-Countly.q.push(["YOUR_APP_KEY_2", "add_event", {
-	key:"second_app"
-}]);
-    </code></pre>
-  </div>
-  <div class="tab is-hidden">
-    <pre><code class="javascript">
-// initializing first instance, which will be global Countly
-Countly.init({
-	app_key: "YOUR_APP_KEY_1",
-	url: "https://try.count.ly" //your server goes here
-})
-// report event to first app
-Countly.add_event({
-	key:"first_app"
-});
-
-// initialize second instance for another app
-var Countly2 = Countly.init({
-	app_key: "YOUR_APP_KEY_2", //must have different APP key
-	url: "https://try.count.ly" //your server goes here
-});
-// report event to second app
-Countly2.add_event({
-	key:"second_app"
-});
-    
-    </code></pre>
-  </div>
-</div>
 <h2>SDK Internal Limits</h2>
 <p>
   Countly is highly customizable and let's you take a huge part at the control
@@ -2679,71 +2462,4 @@ Countly.max_stack_trace_line_length = 300;
 });</code></pre>
   </div>
 </div>
-<h2>UTM Tags</h2>
-<p>
-  If you are providing possible users links to your website, and if you would like
-  to track those users who have clicked those links, you can do so by using some
-  utm tags within your links and Countly web SDK would recognize and record these
-  users for you.
-</p>
-<p>
-  The web SDK offers you two options to set these tags in your links. First you
-  can use the default tags that has been set to be recognized by the SDK by default.
-  These tags are 'source', 'medium', 'campaign', 'term' and 'content'. If you add
-  any or all of these tags into your links as query Countly would recognize and
-  record them accordingly. An example usage of the default tags is as follows:
-</p>
-<pre><code class="javascript">
-// basic structure of a link that contains all available default tags
-yourUrl + ?utm_source=someValue&amp;utm_medium=someValue&amp;utm_campaign=someValue&amp;utm_term=someValue&amp;utm_content=someValue
-
-//or you can omit tags
-yourUrl + ?utm_source=someValue&amp;utm_campaign=someValue
-
-// yourUrl is the url of your site and someValue is any string value you want to pass
-</code></pre>
-<p>
-  Second option is to define your custom utm tags during the initialization of
-  Countly and use those tags in your links. You have to provide a map of key value
-  pairs where the key is the tag and the value is 'true' if you want the Countly
-  to check for that key in your links:
-</p>
-<div class="tabs">
-  <div class="tabs-menu">
-    <span class="tabs-link is-active">Asynchronous</span>
-    <span class="tabs-link">Synchronous</span>
-  </div>
-  <div class="tab">
-    <pre><code class="javascript">
-Countly.app_key = "YOUR_APP_KEY";
-Countly.device_id = "1234-1234-1234-1234";
-// add your custom tags and set their value to true
-Countly.utm = {tag1: true, tag2: true};
-
-// then your links should look like this:
-yourUrl + ?utm_tag1=someValue&amp;utm_tag2=someValue
-</code></pre>
-  </div>
-  <div class="tab is-hidden">
-    <pre><code class="javascript">Countly.init({
-    app_key:"YOUR_APP_KEY",
-    device_id:"1234-1234-1234-1234",
-    // add your custom tags and set their value to true
-    utm: {tag1: true, tag2: true}
-});
-
-// then your links should look like this:
-yourUrl + ?utm_tag1=someValue&amp;utm_tag2=someValue
-</code></pre>
-  </div>
-</div>
-<p>
-  The values you have provided will be captured and stored as user properties,
-  under the keys 'utm_source', 'utm_medium', 'utm_campaign', 'utm_term' and 'utm_content'
-  if you have used the default tags or as 'utm_yourCustomTag1', 'utm_yourCustomTag1'...
-  if you have used custom tags, together with the corresponding user when a user
-  clicks that link. This will enable you to segment users in all places around
-  the dashboard, where granular data is used and segmentation capabilities are
-  provided.
-</p>
 <p>&nbsp;</p>
